--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <header>
-        <div><img src="Group.png" alt=""></div>
-        <img src="lemon-pie 1.png" alt="">
+        <div><a href="index.html"><img src="Group.png" alt="Logo de la página"></a></div>
+        <a href="https://www.recetasnatura.com.ar/budin-de-zanahoria-yogur-y-chantilly-de-queso"><img src="lemon-pie 1.png" alt="Imagen de un pie de limón"></a> 
     </header>
     <main>
         <h1>El clásico Lemon Pie</h1>
-        <p>Es el preferido de los que les gusta lo dulce pero no lo empalagoso. El lemon pie es una tarta, es decir, una base de masa y un relleno. Como su nombre lo indica, está hecha con jugo de limón, azúcar y huevos. Todo eso mezclado hace el famoso custard, el relleno cremoso amarillo que es tan típico del lemon pie.</p>
+        <p>Es el preferido de los que les gusta lo dulce pero no lo empalagoso. El lemon pie es una tarta, es decir, una base de masa y un relleno. Como su nombre <br>
+             lo indica, está hecha con jugo de limón, azúcar y huevos. Todo eso mezclado hace el famoso custard, el relleno cremoso amarillo que es tan típico del lemon pie.</p>
         <h2>Ingredientes</h2>
         <h3>Para la masa</h3>
         <ul>
